--- a/lang/en.json
+++ b/lang/en.json
@@ -1,22 +1,22 @@
 {
-  "BOILERPLATE.AbilityStr": "Strength",
-  "BOILERPLATE.AbilityCon": "Constitution",
-  "BOILERPLATE.AbilityDex": "Dexterity",
-  "BOILERPLATE.AbilityInt": "Intelligence",
-  "BOILERPLATE.AbilityWis": "Wisdom",
-  "BOILERPLATE.AbilityCha": "Charisma",
+  "TRESDETALPHA.AbilityStr": "Strength",
+  "TRESDETALPHA.AbilityCon": "Constitution",
+  "TRESDETALPHA.AbilityDex": "Dexterity",
+  "TRESDETALPHA.AbilityInt": "Intelligence",
+  "TRESDETALPHA.AbilityWis": "Wisdom",
+  "TRESDETALPHA.AbilityCha": "Charisma",
 
-  "BOILERPLATE.AbilityStrAbbr": "str",
-  "BOILERPLATE.AbilityConAbbr": "con",
-  "BOILERPLATE.AbilityDexAbbr": "dex",
-  "BOILERPLATE.AbilityIntAbbr": "int",
-  "BOILERPLATE.AbilityWisAbbr": "wis",
-  "BOILERPLATE.AbilityChaAbbr": "cha",
+  "TRESDETALPHA.AbilityStrAbbr": "str",
+  "TRESDETALPHA.AbilityConAbbr": "con",
+  "TRESDETALPHA.AbilityDexAbbr": "dex",
+  "TRESDETALPHA.AbilityIntAbbr": "int",
+  "TRESDETALPHA.AbilityWisAbbr": "wis",
+  "TRESDETALPHA.AbilityChaAbbr": "cha",
 
-  "BOILERPLATE.EffectCreate": "Create Effect",
-  "BOILERPLATE.EffectToggle": "Toggle Effect",
-  "BOILERPLATE.EffectEdit": "Edit Effect",
-  "BOILERPLATE.EffectDelete": "Delete Effect",
+  "TRESDETALPHA.EffectCreate": "Create Effect",
+  "TRESDETALPHA.EffectToggle": "Toggle Effect",
+  "TRESDETALPHA.EffectEdit": "Edit Effect",
+  "TRESDETALPHA.EffectDelete": "Delete Effect",
 
-  "BOILERPLATE.Add": "Add"
+  "TRESDETALPHA.Add": "Add"
 }
