Alteração de nome mana para magia. Alteração na ficha de personagem, colocando os campos com os devidos nomes.

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -37,11 +37,11 @@
   "TRESDETALPHA.Caracteristicas.armadura.abreviacao": "A",
   "TRESDETALPHA.Caracteristicas.poderDeFogo.label": "Poder de Fogo",
   "TRESDETALPHA.Caracteristicas.poderDeFogo.abreviacao": "PdF",
-  "TRESDETALPHA.Pontos.experiencia.label": "Ponto(s) de Experiência",
+  "TRESDETALPHA.Pontos.experiencia.label": "Ponto(s) de Exp.",
   "TRESDETALPHA.Pontos.experiencia.abreviacao": "XP",
-  "TRESDETALPHA.Pontos.mana.nome": "Mana",
-  "TRESDETALPHA.Pontos.mana.label": "Ponto(s) de Mana",
-  "TRESDETALPHA.Pontos.mana.abreviacao": "PM",
+  "TRESDETALPHA.Pontos.magia.nome": "magia",
+  "TRESDETALPHA.Pontos.magia.label": "Ponto(s) de Magia",
+  "TRESDETALPHA.Pontos.magia.abreviacao": "PM",
   "TRESDETALPHA.Pontos.vida.nome": "Vida",
   "TRESDETALPHA.Pontos.vida.label": "Ponto(s) de Vida",
   "TRESDETALPHA.Pontos.vida.abreviacao": "PV",
