--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -1,31 +1,12 @@
 {
-  "TRESDETALPHA.AbilityStr": "Strength",
-  "TRESDETALPHA.AbilityCon": "Constitution",
-  "TRESDETALPHA.AbilityDex": "Dexterity",
-  "TRESDETALPHA.AbilityInt": "Intelligence",
-  "TRESDETALPHA.AbilityWis": "Wisdom",
-  "TRESDETALPHA.AbilityCha": "Charisma",
-
-  "TRESDETALPHA.AbilityStrAbbr": "forca",
-  "TRESDETALPHA.AbilityConAbbr": "resistencia",
-  "TRESDETALPHA.AbilityDexAbbr": "habilidade",
-  "TRESDETALPHA.AbilityIntAbbr": "armadura",
-  "TRESDETALPHA.AbilityWisAbbr": "poderDeFogo",
-  "TRESDETALPHA.AbilityChaAbbr": "cha",
-
-  "TRESDETALPHA.EffectCreate": "Create Effect",
-  "TRESDETALPHA.EffectToggle": "Toggle Effect",
-  "TRESDETALPHA.EffectEdit": "Edit Effect",
-  "TRESDETALPHA.EffectDelete": "Delete Effect",
-
   "TYPES.Actor.personagem": "Personagem do Jogador",
   "TYPES.Actor.npc": "Personagem do Mestre",
-  "TYPES.Item.objeto": "Objeto",
-  "TYPES.Item.magia": "Magia",
-  "TYPES.Item.pericia": "Perícia",
-  "TYPES.Item.vantagem": "Vantagem",
+  "TYPES.Item.objetos": "Objetos",
+  "TYPES.Item.magias": "Magias",
+  "TYPES.Item.pericias": "Perícias",
+  "TYPES.Item.vantagens": "Vantagens",
   "TYPES.Item.vantagemUnica": "Vantagem Única",
-  "TYPES.Item.desvantagem": "Desvantagem",
+  "TYPES.Item.desvantagens": "Desvantagens",
 
   "TRESDETALPHA.Caracteristicas.forca.label": "Força",
   "TRESDETALPHA.Caracteristicas.forca.abreviacao": "F",
@@ -55,6 +36,6 @@
 
   "tresdetalpha.TresDeTAlphaActorSheet": "Ficha Personagem Padrão",
   "tresdetalpha.TresDeTAlphaItemSheet": "Ficha Item Padrão",
-  
+
   "Settings": {}
 }
