Alteração no layout da ficha principal.

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -23,7 +23,7 @@
   "TRESDETALPHA.Caracteristicas.armadura.abreviacao": "A",
   "TRESDETALPHA.Caracteristicas.poderDeFogo.label": "Poder de Fogo",
   "TRESDETALPHA.Caracteristicas.poderDeFogo.abreviacao": "PdF",
-  "TRESDETALPHA.Pontos.experiencia.label": "Pts de Experiência",
+  "TRESDETALPHA.Pontos.experiencia.label": "Ponto(s) de Experiência",
   "TRESDETALPHA.Pontos.experiencia.abreviacao": "XP",
   "TRESDETALPHA.Pontos.magia.nome": "Magia",
   "TRESDETALPHA.Pontos.magia.label": "Ponto(s) de Magia",
