--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -53,6 +53,7 @@
   "TRESDETALPHA.Exigencias": "Exigências",
   "TRESDETALPHA.Aba.caracteristica": "Característica",
   "TRESDETALPHA.Aba.descricao": "Descrição",
+  "TRESDETALPHA.Aba.historia": "História",
   "TRESDETALPHA.Aba.item": "Itens",
   "TRESDETALPHA.Aba.magia": "Magias",
   "TRESDETALPHA.Aba.efeito": "Efeitos",
