Feat: Bonus nas habilidades! sugestão do Tiago Luis para que pudesse se adicionar bonus

--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -22,7 +22,7 @@
   "TRESDETALPHA.Caracteristicas.resistencia.abreviacao": "R",
   "TRESDETALPHA.Caracteristicas.armadura.label": "Armadura",
   "TRESDETALPHA.Caracteristicas.armadura.abreviacao": "A",
-  "TRESDETALPHA.Caracteristicas.poderDeFogo.label": "Poder de Fogo",
+  "TRESDETALPHA.Caracteristicas.poderDeFogo.label": "PdF",
   "TRESDETALPHA.Caracteristicas.poderDeFogo.abreviacao": "PdF",
   "TRESDETALPHA.Pontos.label": "Pontos",
   "TRESDETALPHA.Pontos.experiencia.label": "Ponto(s) de Experiência",
